--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,6 +1,106 @@
 *{
     box-sizing: border-box;
+    margin: 0 auto;
+    font-size: 1rem;
+    text-align: center;
 }
-html{
-    background-color: rgb(195, 226, 255);
+a{
+    text-decoration: none;
+    color: black
+}
+.mainContainer{
+    max-width: 1600px;
+}
+.headerContainer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    color: white;
+    background-color: black;
+}
+/* img.logo{
+    width: 100%;
+    max-height: 100px;
+} */
+.logo, .icon{
+    width: 80px;
+}
+/* #logo_link{
+    max-width: 20%;
+} */
+.navContainer{
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+}
+.linksContainer{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    flex-wrap: wrap;
+    align-items: center;
+    list-style: none;
+}
+nav a{
+    font-size: 1.5rem;
+    color: white;
+    background-color: black;
+}
+nav a:hover{
+    color: rgba(255, 255, 255, 0.639);
+    transition: all ease .7s;
+    font-size: 1.48rem;
+}
+img{
+    max-width: 100%;
+}
+#background {
+    height: 725px;
+    background-color: rgb(36, 36, 36);
+}
+#hero-msg{
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+    align-items: center;
+}
+.card-img{
+    box-shadow: 2px 2px white;
+}
+.button-box, .join{
+    background-color: white;
+    color: black;
+    padding: .5rem 1rem;
+    margin: 2rem;
+    border: solid white;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 6rem;
+}
+.button-box{
+    width: 7rem;
+}
+.button-box:hover{
+    background-color: rgb(212, 212, 212);
+    color: rgba(0, 0, 0, 0.514);
+    border: solid rgb(212, 212, 212);
+    margin: 3rem;
+    padding: .7rem 1.1rem;
+    transition: all ease .5s;
+}
+.join:hover{
+    background-color: rgb(212, 212, 212);
+    color: rgba(0, 0, 0, 0.514);
+    border: solid rgb(212, 212, 212);
+    margin: 3rem;
+    padding: .7rem 1.2rem;
+    transition: all ease .5s;
+}
+.msg{
+    color: white;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    margin-top: 1rem;
+    align-items: center;
 }
