--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -68,33 +68,33 @@ img{
     box-shadow: 2px 2px white;
 }
 .button-box, .join{
-    background-color: white;
+    background-color: rgb(212, 212, 212);
     color: black;
     padding: .5rem 1rem;
     margin: 2rem;
     border: solid white;
     border-radius: 5px;
     cursor: pointer;
-    width: 6rem;
-}
-.button-box{
     width: 7rem;
 }
+.button-box{
+    width: 8rem;
+}
 .button-box:hover{
-    background-color: rgb(212, 212, 212);
+    background-color: rgb(177, 177, 177);
     color: rgba(0, 0, 0, 0.514);
     border: solid rgb(212, 212, 212);
-    margin: 3rem;
+    margin-bottom: 3rem;
     padding: .7rem 1.1rem;
-    transition: all ease .5s;
+    transition: all ease .7s;
 }
 .join:hover{
     background-color: rgb(212, 212, 212);
-    color: rgba(0, 0, 0, 0.514);
+    color: rgb(0, 0, 0);
     border: solid rgb(212, 212, 212);
-    margin: 3rem;
+    margin-bottom: 3rem;
     padding: .7rem 1.2rem;
-    transition: all ease .5s;
+    transition: all ease .7s;
 }
 .msg{
     color: white;
@@ -103,4 +103,7 @@ img{
     flex-direction: column;
     margin-top: 1rem;
     align-items: center;
+}
+footer{
+    margin: 4rem;
 }
