--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -95,10 +95,8 @@ section.msg{
     background-color: #4a4a40;
     box-shadow: 3px 3px rgb(6, 30, 33);
 }
-#hero-box{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: .4rem;
+#hero-img{
+    width: 100vw;
 }
 #hero-msg{
     display: flex;
@@ -107,6 +105,7 @@ section.msg{
     align-items: center;
     justify-content: center;
     align-content: center;
+    margin-top: -100px;
 }
 .home-grid{
     display: grid;
@@ -133,11 +132,12 @@ section.msg{
     box-shadow: 2px 2px white;
     width: 100%;
     box-shadow: 4px 4px rgb(111 112 97);
-    transition: opacity .8s;
+    transition: all .8s;
 }
 .card-img:hover{
     opacity: .8;
     transition: all .8s;
+    transform: scale(1.1);
 }
 .card-title{
     font-size: 2rem;
