--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -107,6 +107,10 @@ section.msg{
     align-content: center;
     margin-top: -100px;
 }
+h1.home-title{
+    font-size: 2.5rem;
+    color: #6f7061;
+}
 .home-grid{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
