--- a/sitePlan/styles/site-plan.css
+++ b/sitePlan/styles/site-plan.css
@@ -19,11 +19,11 @@ Fonts are separated by a | */
   --headline-color-on-color: white; /* headlines on a colored background */ 
   --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --paragraph-background-color: #5e503f  ;
+  --nav-link-color: #eae0d5;
+  --nav-background-color: #22333b;
+  --nav-hover-link-color: #22333b;
+  --nav-hover-background-color: #eae0d5;
 }
 
 .logo{
