--- a/sitePlan/styles/site-plan.css
+++ b/sitePlan/styles/site-plan.css
@@ -181,3 +181,8 @@ nav a:hover {
   border-top: 1px solid;
   border-right: 1px solid;
 }
+
+/* class created by me */
+.wireframesB{
+  max-width: 100vw;
+}
